API for GreenMail standalone and docker (implements #362)
- Fixed broken shading (disabled jersey hk2 due to filtered
  META-INF/services)

- Implemented delete-user
